# resource_packager

./: .gitignore  Cargo.toml  resource_packager.fbs  test.rcslib  test.txt
src/: index_serialization.rs  lib.rs  main.rs  packager.rs  peekable_stream.rs  resource_library.rs  serialization.rs
