[package]
name = "resource_packager"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
anyhow = "1.0.79"
rust-lzma = { git = "https://github.com/BrianPAmsler/rust-lzma.git" }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
