[package]
name = "resource-packager"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }
enable-ansi-support = { version = "0.3.1", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
tempfile = { version = "3.27.0", optional = true}
thiserror = "2.0.18"
xz2 = { version = "0.1.7", optional = true}

[features]
default = ["read", "compression"]
build-binary = ["enable-ansi-support", "clap"]
compression = ["xz2"]
read = []
write = ["tempfile"]

[[bin]]
name = "resource-packager"
required-features = ["build-binary", "read", "write"]

[dev-dependencies]
base64 = "0.22.1"
base64-literal = "0.1.0"
